Need to confirm new password.

--- a/Manage/My/User/locales/de/manage/my/user.ini
+++ b/Manage/My/User/locales/de/manage/my/user.ini
@@ -45,7 +45,7 @@ labelStatus				= "Status"
 labelRoleId				= "Rolle"
 labelCompanyId			= "Unternehmen"
 labelGender				= "Geschlecht"
-labelSalutation			= "Anrede / Titel"
+labelSalutation			= "Titel"
 labelFirstname			= "Vorname"
 labelSurname			= "Nachname"
 labelPostcode			= "Postleitzahl"
@@ -82,14 +82,21 @@ timePhrasePrefix		= "vor"
 timePhraseSuffix		= ""
 
 [password]
-legend					= "Passwort ändern"
-labelPassword			= "aktuelles Passwort"
-labelPasswordNew		= "neues Passwort"
-buttonSave				= "speichern"
-msgSuccess				= "Das neue Passwort wurde gespeichert."
-msgNoPasswordOld		= "Das <label for="input_passwordOld">aktuelle Passwort</label> fehlt."
-msgNoPasswordNew		= "Das <label for="input_passwordNew">neue Passwort</label> fehlt."
-msgPasswordMismatch		= "Das ist nicht das <label for="input_passwordOld">aktuelle Passwort</label>."
-msgPasswordInvalid		= "Das <label for="input_passwordNew">neue Passwort</label> ist ungültig."
-msgPasswordTooShort		= "Das <label for="input_passwordNew">neue Passwort</label> ist zu kurz."
-msgPasswordTooWeak		= "Das <label for="input_passwordNew">neue Passwort</label> ist zu schwach."
+legend						= "Passwort ändern"
+labelPasswordOld			= "aktuelles Passwort"
+labelPasswordOld_title		= ""
+labelPasswordNew			= "neues Passwort"
+labelPasswordNew_title		= "min. %d Zeichen"
+labelPasswordConfirm		= "Passwort bestätigen"
+labelPasswordConfirm_title	= ""
+buttonSave					= "speichern"
+msgSuccess					= "Das neue Passwort wurde gespeichert."
+msgPasswordOldMissing		= "Das <label for="input_passwordOld">aktuelle Passwort</label> fehlt."
+msgPasswordOldMismatch		= "Das ist nicht das <label for="input_passwordOld">aktuelle Passwort</label>."
+msgPasswordNewMissing		= "Das <label for="input_passwordNew">neue Passwort</label> fehlt."
+msgPasswordNewInvalid		= "Das <label for="input_passwordNew">neue Passwort</label> ist ungültig."
+msgPasswordNewTooShort		= "Das <label for="input_passwordNew">neue Passwort</label> ist zu kurz."
+msgPasswordNewTooWeak		= "Das <label for="input_passwordNew">neue Passwort</label> ist zu schwach."
+msgPasswordNewSame			= "Das <label for="input_passwordNew">neue Passwort</label> muss sich vom aktuellen Passwort unterscheiden."
+msgPasswordConfirmMissing	= "Das neue Passwort wurde nicht bestätigt."
+msgPasswordConfirmMismatch	= "Das neue Passwort wurde nicht korrekt bestätigt."
