--- a/Manage/My/User/Avatar/locales/de/manage/my/user/avatar.ini
+++ b/Manage/My/User/Avatar/locales/de/manage/my/user/avatar.ini
@@ -3,3 +3,8 @@ heading			= "Avatar"
 
 [module]
 tab				= "Avatar"
+
+
+[msg]
+successImageSaved	= "Das Bild wurde gespeichert."
+errorFileTooLarge	= "Die Datei ist zu groß."
