--- a/Members/locales/de/member.ini
+++ b/Members/locales/de/member.ini
@@ -15,10 +15,10 @@ search					= "Neue Kontakte"
 -1						= "abgelehnt"
 
 [view]
-heading					= "Infos"
+heading					= "Benutzerprofil"
 buttonCancel			= "zurück"
 buttonRequest			= "Verbindung anfragen"
-buttonRelease			= "Verbindung lösen"
+buttonRevoke			= "Verbindung aufheben"
 buttonAccept			= "Anfrage annehmen"
 buttonReject			= "Anfrage ablehnen"
 
@@ -26,4 +26,17 @@ buttonReject			= "Anfrage ablehnen"
 onRequest				= "Anfrage nach Verbindung"
 onAccept				= "Anfrage nach Verbindung angenommen"
 onReject				= "Anfrage nach Verbindung abgelehnt"
-onRelease				= "Verbindung beendet"
+onRevoke				= "Verbindung beendet"
+
+[msg]
+successAccepted			= "Die Verbindungsanfrage wurde angenommen. Der Anfragende wurde informiert."
+successRejected			= "Die Verbindungsanfrage wurde abgelehnt. Der Anfragende wurde informiert."
+successRequested		= "Relation request has been sent. Please wait for confirmation!"
+successRevoke			= "Die Verbindung wurde aufgelöst. Der andere Benutzer wurde informiert."
+
+errorUserIdInvalid		= "Dieser Benutzer existiert nicht."
+errorRelationIdInvalid	= "Diese Verbindung existiert nicht ."
+errorAlreadyRequested	= "Die Verbindungsanfrage wurde bereits geschickt. Bitte auf die Reaktionen des anderen Benutzers warten!"
+errorAlreadyAccepted	= "Die Verbindungsanfrage wurde bereits angenommen."
+
+failureMail				= "Das Versenden der E-Mail an den anderen Benutzer ist gescheitert. Bitte später noch einmal probieren!"
