Extend configuration to support 3 images and text locales.

--- a/Manage/My/User/Avatar/locales/de/manage/my/user/avatar.ini
+++ b/Manage/My/User/Avatar/locales/de/manage/my/user/avatar.ini
@@ -1,10 +1,13 @@
-[index]
-heading			= "Avatar"
-
 [module]
-tab				= "Avatar"
+tab						= "Avatar"
 
+[index]
+heading					= "Avatar"
+labelUpload				= "Bild-Datei"
+buttonSave				= "speichern"
+buttonRemove			= "entfernen"
+buttonRemove_confirm	= "Wirklich?"
 
 [msg]
-successImageSaved	= "Das Bild wurde gespeichert."
-errorFileTooLarge	= "Die Datei ist zu groß."
+successImageSaved		= "Das Bild wurde gespeichert."
+errorFileTooLarge		= "Die Datei ist zu groß."
