Rearanged address input fields.

--- a/Resource/Authentication/locales/de/auth.ini
+++ b/Resource/Authentication/locales/de/auth.ini
@@ -55,7 +55,7 @@ labelPassword			= "Passwort"
 labelPassword_title		= "Mind. %d Zeichen"
 labelEmail				= "E-Mail-Adresse"
 labelGender				= "Geschlecht"
-labelSalutation			= "Anrede / Titel"
+labelSalutation			= "Titel"
 labelFirstname			= "Vorname"
 labelSurname			= "Nachname"
 labelPostcode			= "Postleitzahl"
