Develope local authentication.

--- a/Resource/Authentication/Backend/Local/locales/de/mail/auth/local/register.txt
+++ b/Resource/Authentication/Backend/Local/locales/de/mail/auth/local/register.txt
@@ -5,7 +5,7 @@ Du hast dir ein Benutzerkonto bei <%appTitle%> erstellt.
 
 Bitte aktiviere das Konto, indem du diesem Link folgst:
 
-<%appBaseUrl%>auth/confirm/<%pak%><%?from%>
+<%appBaseUrl%>auth/local/confirm/<%pak%><%?from%>
 
 oder gib nach der Registrierung diesen Code ein:
 
