--- a/Resource/Authentication/Backend/Local/locales/de/mail/auth/local/password.txt
+++ b/Resource/Authentication/Backend/Local/locales/de/mail/auth/local/password.txt
@@ -8,6 +8,6 @@ Das neue Passwort ist: <%password%>
 Bitte melde dich mit diesem Passwort an und ändere das Passwort anschliessend
 in den Kontoeinstellungen
 
-Login: <%appBaseUrl%>auth/login?login_username=<%username%>
+Login: <%appBaseUrl%>auth/local/login/<%username%>
 
 Solltest du das Passwort nicht beantragt haben, kannst du diese E-Mail ignorieren.
