--- a/Resource/Authentication/Backend/Local/locales/en/mail/auth/local/password.txt
+++ b/Resource/Authentication/Backend/Local/locales/en/mail/auth/local/password.txt
@@ -7,7 +7,7 @@ The new password is: <%password%>
 
 Please login using this password and set an own new password in the account settings.
 
-Login: <%appBaseUrl%>auth/login?login_username=<%username%>
+Login: <%appBaseUrl%>auth/local/login/<%username%>
 
 If you did not request a new password, please ignore this mail.
 
