Extend by country support.

--- a/Manage/My/User/locales/de/manage/my/user.ini
+++ b/Manage/My/User/locales/de/manage/my/user.ini
@@ -48,10 +48,10 @@ labelGender				= "Geschlecht"
 labelSalutation			= "Titel"
 labelFirstname			= "Vorname"
 labelSurname			= "Nachname"
+labelCountry			= "Land"
 labelPostcode			= "Postleitzahl"
 labelCity				= "Stadt"
-labelStreet				= "Strasse"
-labelNumber				= "Hausnummer"
+labelStreet				= "Strasse und Hausnummer"
 labelPhone				= "Telefon"
 labelFax				= "Telefax"
 labelPassword			= "Passwort zur Bestätigung"
