--- a/Manage/My/User/locales/en/manage/my/user.ini
+++ b/Manage/My/User/locales/en/manage/my/user.ini
@@ -41,10 +41,10 @@ labelGender				= "Gender"
 labelSalutation			= "Title"
 labelFirstname			= "Firstname"
 labelSurname			= "Surname"
+labelCountry			= "Country"
 labelPostcode			= "Postcode"
 labelCity				= "City"
-labelStreet				= "Street"
-labelNumber				= "Number"
+labelStreet				= "Street and Number"
 labelPhone				= "Phone"
 labelFax				= "Fax"
 labelPassword			= "Passwort confirmation"
