Extend by country support.

--- a/Manage/Users/locales/de/manage/user.ini
+++ b/Manage/Users/locales/de/manage/user.ini
@@ -42,10 +42,10 @@ labelGender				= "Geschlecht"
 labelSalutation			= "Anrede / Titel"
 labelFirstname			= "Vorname"
 labelSurname			= "Nachname"
+labelCountry			= "Land"
 labelPostcode			= "Postleitzahl"
 labelCity				= "Stadt"
-labelStreet				= "Strasse"
-labelNumber				= "Hausnummer"
+labelStreet				= "Strasse und Hausnummer"
 labelPhone				= "Telefon"
 labelFax				= "Telefax"
 labelStatus				= "Status"
@@ -76,10 +76,10 @@ labelGender				= "Geschlecht"
 labelSalutation			= "Anrede / Titel"
 labelFirstname			= "Vorname"
 labelSurname			= "Nachname"
+labelCountry			= "Land"
 labelPostcode			= "Postleitzahl"
 labelCity				= "Stadt"
-labelStreet				= "Strasse"
-labelNumber				= "Hausnummer"
+labelStreet				= "Strasse und Hausnummer"
 labelPhone				= "Telefon"
 labelFax				= "Telefax"
 buttonCancel			= "abbrechen"
