Extend by country support.

--- a/Resource/Authentication/Backend/Local/locales/de/auth/local.ini
+++ b/Resource/Authentication/Backend/Local/locales/de/auth/local.ini
@@ -58,10 +58,10 @@ labelGender				= "Geschlecht"
 labelSalutation			= "Titel"
 labelFirstname			= "Vorname"
 labelSurname			= "Nachname"
+labelCountry			= "Land"
 labelPostcode			= "Postleitzahl"
 labelCity				= "Stadt"
 labelStreet				= "Strasse"
-labelNumber				= "Hausnummer"
 labelPhone				= "Telefon"
 labelFax				= "Telefax"
 labelTerms				= "Allgemeine Geschäfts- und Nutzungsbedingungen & Datenschutzerklärung"
