--- a/Resource/Authentication/Backend/Local/locales/en/auth/local.ini
+++ b/Resource/Authentication/Backend/Local/locales/en/auth/local.ini
@@ -58,10 +58,10 @@ labelGender				= "Gender"
 labelSalutation			= "Anrede / Titel"
 labelFirstname			= "Firstname"
 labelSurname			= "Surname"
+labelCountry			= "Country"
 labelPostcode			= "Postcode"
 labelCity				= "City"
 labelStreet				= "Street"
-labelNumber				= "Number"
 labelPhone				= "Phone"
 labelFax				= "Fax"
 labelTerms				= "Terms, conditions and disclaimer"
