--- a/Manage/Pages/locales/de/manage/page.ini
+++ b/Manage/Pages/locales/de/manage/page.ini
@@ -1,49 +1,85 @@
+[tabs]
+general							= "Einstellungen"
+preview							= "Ansicht"
+content							= "HTML-Inhalt"
+meta							= "Suchmaschinenfutter"
+
 [types]
-0			= "normale Seite (statisch)"
-1			= "Verzweigung (ohne Inhalt)"
-2			= "Modul (dynamische Seite)"
+0								= "normale Seite (statisch)"
+1								= "Verzweigung (ohne Inhalt)"
+2								= "Modul (dynamische Seite)"
 
 [formats]
-HTML		= "HTML"
-MD			= "Markdown"
+HTML							= "HTML"
+MD								= "Markdown"
 
 [scopes]
-0			= "Hauptnavigation"
-1			= "Fußnavigation"
-;2			= "Topnavigation"
+0								= "Hauptnavigation"
+1								= "Fußnavigation"
+;2								= "Topnavigation"
 
 [states]
-0			= "versteckt"
-1			= "sichtbar"
-
-[tabs]
-general		= "Einstellungen"
-preview		= "Ansicht"
-content		= "HTML-Inhalt"
-meta		= "Suchmaschinenfutter"
-
-[add]
-msgSuccess						= "Die Seite wurden hinzugefügt."
-msgErrorIdentifierTaken			= "Der Adresspfad '%s' ist bereits vergeben."
-
-[edit]
-heading							= ""
-labelEditor						= "HTML-Editor"
-labelVersion					= "Version"
-no_editor						= "Für diese Seite ist kein HTML-Inhalt möglich."
-msgSuccess						= "Die Informationen der Seite <cite>%s</cite> wurden gespeichert."
-msgErrorIdentifierTaken			= "Der <label for="input_identifier">Adresspfad</label> <cite>%s</cite> ist bereits vergeben."
-msgErrorIdentifierInParentTaken	= "Der <label for="input_identifier">Adresspfad</label> <cite>%s</cite> ist in der gewählten Verzweigung bereits vergeben."
+-1								= "deaktiviert"
+0								= "versteckt"
+1								= "sichtbar"
 
 [editors]
-TinyMCE						= "grafischer Editor"
-CodeMirror					= "Syntaxauszeichnung"
-none						= "Reintext"
+TinyMCE							= "grafischer Editor"
+CodeMirror						= "Syntaxauszeichnung"
+none							= "Reintext"
 
 [list-links]
-prefixBookmark				= "Lesezeichen: "
-prefixPage					= "Seite: "
-prefixDocument				= "Dokument: "
-prefixImage					= "Bild: "
-prefixGallery				= "Galerie: "
+prefixBookmark					= "Lesezeichen: "
+prefixPage						= "Seite: "
+prefixDocument					= "Dokument: "
+prefixImage						= "Bild: "
+prefixGallery					= "Galerie: "
 
+[add]
+heading							= "Neue Seite"
+labelIdentifier					= "Adresse"
+labelTitle						= "Titel"
+labelStatus						= "Sichtbarkeit"
+labelType						= "Seitentyp"
+labelFormat						= "Format"
+labelScope						= "Navigationsbereich"
+labelParentId						= "Unterseite von"
+labelModule						= "Modul"
+labelRank						= "Rang"
+buttonSave						= "speichern"
+
+[edit]
+heading							= "Seite ändern"
+labelIdentifier					= "Adresse"
+labelTitle						= "Titel"
+labelStatus						= "Sichtbarkeit"
+labelType						= "Seitentyp"
+labelFormat						= "Format"
+labelScope						= "Navigationsbereich"
+labelParentId					= "Unterseite von"
+labelModule						= "Modul"
+labelRank						= "Rang"
+buttonCancel					= "abbrechen"
+buttonSave						= "speichern"
+buttonRemove					= "entfernen"
+buttonRemove_confirm			= "Wirklich?"
+buttonCopy						= "kopieren"
+buttonReset						= "zurücksetzen"
+
+labelEditor						= "HTML-Editor"
+labelVersion					= "Version"
+no_editor						= "Bei Seiten vom Typ "Modul (dynamische Seite)" ist kein statischer HTML-Inhalt vorhanden.<br/>Die Seite wird durch das jeweilige Modul befüllt."
+no_content						= "Seiteneinträge vom Typ "Verzweigung" haben keinen Inhalt.<br/>Sie dienen lediglich zur Strukturierung der Navigation."
+no_meta							= "Bei Seiten vom Typ "Verzweigung" werden keine Meta-Angaben benötigt."
+
+[tree]
+no_entries						= "Keine Seiten vorhanden."
+
+[msg]
+successAdded					= "Die Seite wurden hinzugefügt."
+successEdited					= "Die Informationen der Seite <cite>%s</cite> wurden gespeichert."
+successRemoved					= "Die Seite <cite>%s</cite> wurden entfernt."
+errorMissingPageId				= "Keine Seiten-ID gegeben. Weiterleitung zur Übersicht."
+errorInvalidPageId				= "Keine gültige Seiten-ID gegeben. Weiterleitung zur Übersicht."
+errorIdentifierTaken			= "Der <label for="input_identifier">Adresspfad</label> <cite>%s</cite> ist bereits vergeben."
+errorIdentifierInParentTaken	= "Der <label for="input_identifier">Adresspfad</label> <cite>%s</cite> ist in der gewählten Verzweigung bereits vergeben."
