Support sitemap information in meta editor.

--- a/Manage/Pages/locales/de/manage/page.ini
+++ b/Manage/Pages/locales/de/manage/page.ini
@@ -35,6 +35,22 @@ prefixDocument					= "Dokument: "
 prefixImage						= "Bild: "
 prefixGallery					= "Galerie: "
 
+[changefreqs]
+never							= "nie"
+yearly							= "jährlich"
+monthly							= "monatlich"
+weekly							= "wöchentlich"
+daily							= "täglich"
+hourly							= "stündlich"
+always							= "ständig"
+
+[priorities]
+0.1								= "veraltet"
+0.3								= "unwichtig"
+0.5								= "normal"
+0.7								= "wichtig"
+0.9								= "sehr wichtig"
+
 [add]
 heading							= "Neue Seite"
 labelIdentifier					= "Adresse"
@@ -59,6 +75,10 @@ labelScope						= "Navigationsbereich"
 labelParentId					= "Unterseite von"
 labelModule						= "Modul"
 labelRank						= "Rang"
+
+labelChangefreq					= "Änderungshäufigkeit"
+labelPriority					= "Wichtigkeit"
+
 buttonCancel					= "abbrechen"
 buttonSave						= "speichern"
 buttonRemove					= "entfernen"
