Send mail to post author and commenters for new comment.

--- a/Info/Blog/locales/de/info/blog.ini
+++ b/Info/Blog/locales/de/info/blog.ini
@@ -2,9 +2,29 @@
 
 
 [post]
-linkPrev			= "nächster Eintrag: "
-linkNext			= "vorheriger Eintrag: "
-linkIndex			= "zurück zur Übersicht"
+linkPrev				= "nächster Eintrag: "
+linkNext				= "vorheriger Eintrag: "
+linkIndex				= "zurück zur Übersicht"
 
+
+[comment]
+heading					= "Neuer Kommentar"
+labelUsername			= "Name"
+labelUsername_suffix	= ""
+labelEmail				= "E-Mail-Adresse"
+labelEmail_suffix		= "(nicht sichtbar)"
+labelTitle				= "Überschrift"
+labelTitle_suffix		= ""
+labelContent			= "Ausführlicher Kommentar"
+labelContent_suffix		= ""
+buttonSave				= "speichern"
+
+[comments]
+heading					= Kommentare
 
 [msg]
+
+
+[mailSubjects]
+comment					= "Neuer Kommentar bei "%s""
+followup				= "Neuer Kommentar bei "%s""
