Improve usability by AJAX commenting.

--- a/Info/Blog/locales/de/info/blog.ini
+++ b/Info/Blog/locales/de/info/blog.ini
@@ -20,7 +20,8 @@ labelContent_suffix		= ""
 buttonSave				= "speichern"
 
 [comments]
-heading					= Kommentare
+heading					= "Kommentare"
+empty					= "Zu diesem Eintrag gibt es noch keine Kommentare."
 
 [msg]
 
