Apply TinyMCE as editor.

--- a/Manage/Blog/locales/de/manage/blog.ini
+++ b/Manage/Blog/locales/de/manage/blog.ini
@@ -1,11 +1,28 @@
+[states]
+-2						= "deaktiviert"
+-1						= "gemeldet"
+0						= "versteckt"
+1						= "öffentlich"
+2						= "kommentiert"
 
 [add]
 heading					= "neuer Eintrag"
+labelTitle				= "Überschrift"
+labelCategoryId			= "Kategorie"
+labelContent			= "Inhalt"
 buttonCancel			= "zurück"
 buttonSave				= "speichern"
 
 [edit]
 heading					= "Eintrag bearbeiten"
+labelTitle				= "Überschrift"
+labelCategoryId			= "Kategorie"
+labelStatus				= "Zustand"
+labelLanguage			= "Sprache"
+labelAuthorId			= "Autor"
+labelAbstract			= "Kurzinhalt"
+labelAbstract_suffix	= "(für Übersicht)"
+labelContent			= "Inhalt"
 buttonCancel			= "zurück"
 buttonSave				= "speichern"
 buttonRemove			= "entfernen"
