Add support and editor for categories.

--- a/Manage/Blog/locales/de/manage/blog.ini
+++ b/Manage/Blog/locales/de/manage/blog.ini
@@ -9,6 +9,11 @@
 heading					= "neuer Eintrag"
 labelTitle				= "Überschrift"
 labelCategoryId			= "Kategorie"
+labelStatus				= "Zustand"
+labelLanguage			= "Sprache"
+labelAuthorId			= "Autor"
+labelAbstract			= "Kurzinhalt"
+labelAbstract_suffix	= "(für Übersicht)"
 labelContent			= "Inhalt"
 buttonCancel			= "zurück"
 buttonSave				= "speichern"
@@ -31,5 +36,14 @@ buttonRemove_confirm	= "zurück"
 [index]
 heading					= "Blog-Einträge"
 headTitle				= "Überschrift"
+headStatus				= "Zustand"
+headCategory			= "Kategorie"
 empty					= "Keine Einträge vorhanden."
 buttonAdd				= "neuer Eintrag"
+
+[index.filter]
+heading					= "Filter"
+labelStatus				= "Zustand"
+labelCategoryId			= "Kategorie"
+buttonFilter			= "filtern"
+buttonReset				= "zurücksetzen"
