Support new password handling in user resource.

--- a/Resource/Authentication/Backend/Local/locales/de/auth/local.ini
+++ b/Resource/Authentication/Backend/Local/locales/de/auth/local.ini
@@ -5,92 +5,92 @@ config.logout.auto			= "Sitzung automatisch beenden"
 config.session.refresh		= "Sitzung automatisch erhalten"
 
 [login]
-heading					= "Login"
-labelUsername			= "Benutzername"
-labelPassword			= "Passwort"
-labelRemember			= "angemeldet bleiben"
-labelRemember_title		= "automatisch wieder einloggen"
-buttonLogin				= "einloggen"
-buttonRegister			= "Konto anlegen"
-buttonPassword			= "Password vergessen?"
-msgSuccess				= "Du bist nun eingeloggt."
-msgNoUsername			= "Der <label for="input_login_username">Benutzername</label> fehlt."
-msgNoPassword			= "Das <label for="input_login_password">Passwort</label> fehlt."
-msgInvalidUser			= "Zugang verweigert: Das Benutzerkonto existiert nicht."
-msgInvalidPassword		= "Zugang verweigert: Das Passwort ist falsch."
-msgInvalidRole			= "Zugang für diesen Benutzer verweigert."
-msgUserUnconfirmed		= "Zugang verweigert: Das Benutzerkonto wurde noch nicht bestätigt."
-msgUserLocked			= "Zugang verweigert: Das Benutzerkonto wurde gesperrt."
-msgUserDisabled			= "Zugang verweigert: Das Benutzerkonto wurde deaktiviert."
+heading						= "Login"
+labelUsername				= "Benutzername"
+labelPassword				= "Passwort"
+labelRemember				= "angemeldet bleiben"
+labelRemember_title			= "automatisch wieder einloggen"
+buttonLogin					= "einloggen"
+buttonRegister				= "Konto anlegen"
+buttonPassword				= "Password vergessen?"
+msgSuccess					= "Du bist nun eingeloggt."
+msgNoticePasswordChanged	= "Das neue Passwort ist nun aktiv. Das alte Passwort gilt nicht mehr."
+msgNoUsername				= "Der <label for="input_login_username">Benutzername</label> fehlt."
+msgNoPassword				= "Das <label for="input_login_password">Passwort</label> fehlt."
+msgInvalidUser				= "Zugang verweigert: Das Benutzerkonto existiert nicht."
+msgInvalidPassword			= "Zugang verweigert: Das Passwort ist falsch."
+msgInvalidRole				= "Zugang für diesen Benutzer verweigert."
+msgUserUnconfirmed			= "Zugang verweigert: Das Benutzerkonto wurde noch nicht bestätigt."
+msgUserLocked				= "Zugang verweigert: Das Benutzerkonto wurde gesperrt."
+msgUserDisabled				= "Zugang verweigert: Das Benutzerkonto wurde deaktiviert."
 
 [login-info]
-legend					= "Information"
+legend						= "Information"
 
 [logout]
-msgSuccess				= "Sie sind nun ausgeloggt."
-msgAutoLogout			= "Sie wurden nach längerer Inaktivität automatisch abgemeldet."
+msgSuccess					= "Sie sind nun ausgeloggt."
+msgAutoLogout				= "Sie wurden nach längerer Inaktivität automatisch abgemeldet."
 
 [password]
-heading					= "Passwort vergessen?"
-labelEmail				= "E-Mail-Adresse <small class="muted">(verwendet für Benutzerkonto)</small>"
-buttonSend				= "senden"
-msgSuccess				= "Ein neues Passwort wurde an ihre E-Mail-Adresse geschickt."
-msgNoEmail				= "Bitte geben Sie die <label for="input_password_email">E-Mail-Adresse</label> an, die Sie bei ihrem Benutzerkonto verwendet haben."
-msgInvalidEmail			= "Kein Benutzerkonto mit dieser <label for="input_password_email">E-Mail-Adresse</label> gefunden."
-msgSendingMailFailed	= "Die E-Mail mit dem neuen Passwort konnte nicht zugestellt werden. Bitte später noch einmal probieren!"
+heading						= "Passwort vergessen?"
+labelEmail					= "E-Mail-Adresse <small class="muted">(verwendet für Benutzerkonto)</small>"
+buttonSend					= "senden"
+msgSuccess					= "Ein neues Passwort wurde an ihre E-Mail-Adresse geschickt."
+msgNoEmail					= "Bitte geben Sie die <label for="input_password_email">E-Mail-Adresse</label> an, die Sie bei ihrem Benutzerkonto verwendet haben."
+msgInvalidEmail				= "Kein Benutzerkonto mit dieser <label for="input_password_email">E-Mail-Adresse</label> gefunden."
+msgSendingMailFailed		= "Die E-Mail mit dem neuen Passwort konnte nicht zugestellt werden. Bitte später noch einmal probieren!"
 
 [confirm]
-heading					= "Konto bestätigen"
-labelCode				= "Bestätigungs-Code <small class="muted">(aus der Bestätigungs-E-Mail)</small>"
-buttonSend				= "absenden"
-msgSuccess				= "Ihr Benutzerkonto wurde bestätigt. Sie können sich jetzt einloggen."
-msgInvalidCode			= "Der <label for="input_confirm_code">Bestätigungs-Code</label> ist ungültig."
+heading						= "Konto bestätigen"
+labelCode					= "Bestätigungs-Code <small class="muted">(aus der Bestätigungs-E-Mail)</small>"
+buttonSend					= "absenden"
+msgSuccess					= "Ihr Benutzerkonto wurde bestätigt. Sie können sich jetzt einloggen."
+msgInvalidCode				= "Der <label for="input_confirm_code">Bestätigungs-Code</label> ist ungültig."
 
 [register]
-heading					= "Registrierung"
-legendCompany			= "Ihr Unternehmen"
-legendFinish			= "Bedingungen"
-labelUsername			= "Benutzername"
-labelPassword			= "Passwort"
-labelPassword_title		= "Mind. %d Zeichen"
-labelEmail				= "E-Mail-Adresse"
-labelGender				= "Geschlecht"
-labelSalutation			= "Titel"
-labelFirstname			= "Vorname"
-labelSurname			= "Nachname"
-labelCountry			= "Land"
-labelPostcode			= "Postleitzahl"
-labelCity				= "Stadt"
-labelStreet				= "Strasse"
-labelPhone				= "Telefon"
-labelFax				= "Telefax"
-labelTerms				= "Allgemeine Geschäfts- und Nutzungsbedingungen & Datenschutzerklärung"
-labelAccept				= "Ich aktzeptiere die allgemeinen Geschäftsbedingungen."
-buttonSave				= "Konto anlegen"
-msgSuccess				= "Ihr Benutzerkonto wurde erstellt."
-msgNoticeConfirm		= "Ihr Konto muss noch bestätigt werden. Bitte schauen Sie in das E-Mail-Postfach!"
-msgSendingMailFailed	= "Die E-Mail zur Registrierung konnte nicht zugestellt werden. Bitte später noch einmal probieren!"
-
-msgRegistrationClosed	= "Die Registrierung ist derzeit nicht offen. Bitte probieren Sie es später wieder."
-msgRoleInvalid			= "Die angegebene Rolle ist nicht erlaubt."
-msgNoUsername			= "Der <label for="input_username">Benutzername</label> fehlt."
-msgNoPassword			= "Das <label for="input_password">Passwort</label> fehlt."
-msgNoEmail				= "Eine gültige <label for="input_email">E-Mail-Adresse</label> wird benötigt."
-msgNoFirstname			= "Der <label for="input_firstname">Vorname</label> fehlt."
-msgNoSurname			= "Der <label for="input_lastname">Nachname</label> fehlt."
-msgUsernameExisting		= "Ein Benutzer mit dem Benutzernamen <cite>%s</cite> existiert bereits."
-msgUsernameInvalid		= "Der <label for="input_username">Benutzername</label> enthält unzulässige Zeichen."
-msgEmailExisting		= "Ein Benutzer mit der E-Mail-Adresse <cite>%s</cite> existiert bereits."
-msgPasswordTooShort		= "Das <label for="input_password">Passwort</label> ist zu kurz <small>(Mind. %s Zeichen)</small>."
-msgTermsNotAccepted		= "Sie müssen die <label for="input_conditions">allgemeinen Geschäftsbedingungen</label> akzeptieren."
-msgAddressInvalid		= "Die angegebene Adresse konnte auf der Karte nicht gefunden werden."
+heading						= "Registrierung"
+legendCompany				= "Ihr Unternehmen"
+legendFinish				= "Bedingungen"
+labelUsername				= "Benutzername"
+labelPassword				= "Passwort"
+labelPassword_title			= "Mind. %d Zeichen"
+labelEmail					= "E-Mail-Adresse"
+labelGender					= "Geschlecht"
+labelSalutation				= "Titel"
+labelFirstname				= "Vorname"
+labelSurname				= "Nachname"
+labelCountry				= "Land"
+labelPostcode				= "Postleitzahl"
+labelCity					= "Stadt"
+labelStreet					= "Strasse"
+labelPhone					= "Telefon"
+labelFax					= "Telefax"
+labelTerms					= "Allgemeine Geschäfts- und Nutzungsbedingungen & Datenschutzerklärung"
+labelAccept					= "Ich aktzeptiere die allgemeinen Geschäftsbedingungen."
+buttonSave					= "Konto anlegen"
+msgSuccess					= "Ihr Benutzerkonto wurde erstellt."
+msgNoticeConfirm			= "Ihr Konto muss noch bestätigt werden. Bitte schauen Sie in das E-Mail-Postfach!"
+msgSendingMailFailed		= "Die E-Mail zur Registrierung konnte nicht zugestellt werden. Bitte später noch einmal probieren!"
+msgRegistrationClosed		= "Die Registrierung ist derzeit nicht offen. Bitte probieren Sie es später wieder."
+msgRoleInvalid				= "Die angegebene Rolle ist nicht erlaubt."
+msgNoUsername				= "Der <label for="input_username">Benutzername</label> fehlt."
+msgNoPassword				= "Das <label for="input_password">Passwort</label> fehlt."
+msgNoEmail					= "Eine gültige <label for="input_email">E-Mail-Adresse</label> wird benötigt."
+msgNoFirstname				= "Der <label for="input_firstname">Vorname</label> fehlt."
+msgNoSurname				= "Der <label for="input_lastname">Nachname</label> fehlt."
+msgUsernameExisting			= "Ein Benutzer mit dem Benutzernamen <cite>%s</cite> existiert bereits."
+msgUsernameInvalid			= "Der <label for="input_username">Benutzername</label> enthält unzulässige Zeichen."
+msgEmailExisting			= "Ein Benutzer mit der E-Mail-Adresse <cite>%s</cite> existiert bereits."
+msgPasswordTooShort			= "Das <label for="input_password">Passwort</label> ist zu kurz <small>(Mind. %s Zeichen)</small>."
+msgTermsNotAccepted			= "Sie müssen die <label for="input_conditions">allgemeinen Geschäftsbedingungen</label> akzeptieren."
+msgAddressInvalid			= "Die angegebene Adresse konnte auf der Karte nicht gefunden werden."
 
 [gender]
-0						= "nicht angegeben"
-1						= "Frau"
-2						= "Mann"
-3						= "Transgender"
-
+0							= "nicht angegeben"
+1							= "Frau"
+2							= "Mann"
+3							= "Transgender"
 
 [mails]
-onRegister				= "Registrierung und Kontobestätigung"
+onRegister					= "Registrierung und Kontobestätigung"
+onPassword					= "Neues Passwort"
