Add filter for receiver address.

--- a/Admin/Mail/locales/de/admin/mail/queue.ini
+++ b/Admin/Mail/locales/de/admin/mail/queue.ini
@@ -1,22 +1,24 @@
 [states]
--1					= "abgebrochen"
-0					= "neu"
-1					= "versucht"
-2					= "gesendet"
+-2						= "unmöglich"
+-1						= "abgebrochen"
+0						= "neu"
+1						= "versucht"
+2						= "gesendet"
 
 [index]
-heading				= ""
+heading					= ""
 
 [index-list]
-heading				= "E-Mails"
-formatDate			= "d.m.Y H:i"
-noEntries			= "Keine E-Mails gefunden."
+heading					= "E-Mails"
+formatDate				= "d.m.Y H:i"
+noEntries				= "Keine E-Mails gefunden."
 
 [index-filter]
-heading				= "Filter"
-labelStatus			= "Status"
-labelLimit			= "pro Seite"
-labelOrder			= "Sortierung"
-labelDirection		= "Richtung"
-buttonFilter		= "filtern"
-buttonReset			= "zurücksetzen"
+heading					= "Filter"
+labelReceiverAddress	= "Empfänger-Adresse <small class="muted">(enthält)</small>"
+labelStatus				= "Status"
+labelLimit				= "pro Seite"
+labelOrder				= "Sortierung"
+labelDirection			= "Richtung"
+buttonFilter			= "filtern"
+buttonReset				= "zurücksetzen"
