--- a/Server/OAuth/locales/de/oauth.ini
+++ b/Server/OAuth/locales/de/oauth.ini
@@ -1,5 +1,5 @@
 [authorize]
-heading			= "Authorization Code Grant"
+heading			= "Einloggen mit Ihrem Account"
 labelUsername	= "Benutzer"
 labelPassword	= "Passwort"
 buttonCancel	= "abbrechen"
