Support hook View::onRenderContent by abtract blog post panel.

--- a/Info/Blog/locales/de/info/blog.ini
+++ b/Info/Blog/locales/de/info/blog.ini
@@ -1,4 +1,5 @@
 [index]
+linkMore				= "(weiter lesen)"
 
 
 [post]
@@ -29,3 +30,8 @@ empty					= "Zu diesem Eintrag gibt es noch keine Kommentare."
 [mailSubjects]
 comment					= "Neuer Kommentar bei "%s""
 followup				= "Neuer Kommentar bei "%s""
+
+[panelTitles]
+typeDefault				= "Blog"
+typeLatest				= "Aktueller Blog-Beitrag"
+typeRandom				= "Blog <small>(zufällig)</small>"
