Add button to resend sent mail, locales for mail facts and and prototype of dashboard support.

--- a/Admin/Mail/locales/de/admin/mail/queue.ini
+++ b/Admin/Mail/locales/de/admin/mail/queue.ini
@@ -22,3 +22,23 @@ labelOrder				= "Sortierung"
 labelDirection			= "Richtung"
 buttonFilter			= "filtern"
 buttonReset				= "zurücksetzen"
+
+[view-facts]
+heading					= "Fakten"
+labelMailId				= "Mail-ID"
+labelSubject			= "Betreff"
+labelSenderId			= "Absender-ID"
+labelReceiverId			= "Empfänger-ID"
+labelStatus				= "Zustand"
+labelAttempts			= "Sendeversuche"
+labelLanguage			= "Sprache"
+labelSenderAddress		= "Absenderadresse"
+labelReceiverAddress	= "Empfängeradresse"
+labelReceiverName		= "Empfängername"
+labelEnqueuedAt			= "eingereiht"
+labelAttemptedAt		= "versucht"
+labelSentAt				= "versendet"
+
+[view-body]
+heading					= "Inhalt"
+format					= "Format"
