Split view into list and module config editor.

--- a/Admin/Config/locales/de/admin/config.ini
+++ b/Admin/Config/locales/de/admin/config.ini
@@ -3,3 +3,6 @@ heading				= "Modulkonfiguration"
 buttonSave			= "speichern"
 
 [msg]
+successSaved		= "Die Einstellungen wurden gespeichert."
+successRestored		= "Die vorherigen Einstellungen wurden wiederhergestellt."
+
