Improve usability and information density of role rights editor.

--- a/Manage/Users/locales/de/manage/role.ini
+++ b/Manage/Users/locales/de/manage/role.ini
@@ -71,6 +71,9 @@ msgError-2			= "Eine Rolle mit dem Titel <em>%s</em> existiert bereits."
 
 [editRights]
 heading				= "Zugriffsrechte"
+headController		= "Ressource"
+headActions			= "Aktionen"
+labelShowAll		= "zeige alle Rechte"
 
 [remove]
 msgSuccess			= "Die Rolle <em>%s</em> wurde entfernt."
