Refactoring, disable public attribute, allow projectless notes and show tags only related to user project notes.

--- a/Work/Notes/locales/de/work/note.ini
+++ b/Work/Notes/locales/de/work/note.ini
@@ -48,7 +48,7 @@ labelPublic				= "Öffentlich"
 labelProjectId			= "Projekt"
 labelQuery				= "Suche nach..."
 labelVisibility			= "Sichtbarkeit"
-labelLimit				= "pro&nbsp;Seite"
+labelLimit				= "Anzahl"
 labelOrder				= "Sortierung"
 labelTagsActive			= "aktive Schlagwörter"
 labelTagsSuggested		= "Vorschläge"
