--- a/Manage/My/Mangopay/locales/de/manage/my/mangopay/card.ini
+++ b/Manage/My/Mangopay/locales/de/manage/my/mangopay/card.ini
@@ -1,3 +1,13 @@
+[cardTypes]
+CB_VISA_MASTERCARD		= "CB_VISA_MASTERCARD"
+AMEX					= "AMEX"
+DINERS					= "DINERS"
+MASTERPASS				= "MASTERPASS"
+MAESTRO					= "MAESTRO"
+P24						= "P24"
+IDEAL					= "IDEAL"
+BCMC					= "BCMC"
+PAYLIB					= "PAYLIB"
 
 
 
