--- a/Manage/Catalog/locales/de/manage/catalog.ini
+++ b/Manage/Catalog/locales/de/manage/catalog.ini
@@ -3,3 +3,4 @@
 manage/catalog/article		= "<i class='icon-book'></i> Veröffentlichungen"
 manage/catalog/author		= "<i class='icon-user'></i> Autoren"
 manage/catalog/category		= "<i class='icon-list'></i> Fachbereiche & Serien"
+manage/catalog/tag			= "<i class='icon-tag'></i> Schlagwörter"
