Extend credit card payins by preauthorization.

--- a/Manage/My/Mangopay/locales/de/manage/my/mangopay/card.ini
+++ b/Manage/My/Mangopay/locales/de/manage/my/mangopay/card.ini
@@ -27,3 +27,5 @@ errorCode-02624			= "Card expired"
 errorCode-09104			= "Client certificate is disabled"
 errorCode-09201			= "You do not have permissions to make this API call"
 errorCode-02631			= "Delay exceeded"
+
+errorCode-101410        = "This card is not active."
