Extract messages to locales.

--- a/Info/Blog/locales/de/info/blog.ini
+++ b/Info/Blog/locales/de/info/blog.ini
@@ -25,7 +25,9 @@ heading					= "Kommentare"
 empty					= "Zu diesem Eintrag gibt es noch keine Kommentare."
 
 [msg]
-
+successCommentAdded		= "Der Kommentar wurde gespeichert und wird nach interner Freigabe sichtbar." 
+errorInvalidPostId		= "Dieser Blog-Eintrag existiert nicht. Zurück zur Übersicht."
+failureNoMailModule		= "Das Modul Info:Blog benötigt ein Mail-Modul, wenn die Mail-Funktionen aktiviert sind."
 
 [mailSubjects]
 comment					= "Neuer Kommentar bei "%s""
