Remove locales for register and password.

--- a/Resource/Authentication/Backend/OAuth/locales/de/auth/oauth.ini
+++ b/Resource/Authentication/Backend/OAuth/locales/de/auth/oauth.ini
@@ -1,3 +1,6 @@
+[backend]
+title					= "OAuth-Konto"
+
 [module]
 title						= "Authentifikation"
 config.logout.auto.minutes	= "Sitzungsdauer <small class="muted">in Minuten</small>"
