Add JavaScript from abstract module.

--- a/Resource/Authentication/Backend/Local/locales/de/auth/local.ini
+++ b/Resource/Authentication/Backend/Local/locales/de/auth/local.ini
@@ -1,3 +1,6 @@
+[backend]
+title					= "Lokales Benutzerkonto"
+
 [module]
 title						= "Authentifikation"
 config.logout.auto.minutes	= "Sitzungsdauer <small class="muted">in Minuten</small>"
