Extract error codes to locales file.

--- a/Work/Mail/Check/locales/de/work/mail/check.ini
+++ b/Work/Mail/Check/locales/de/work/mail/check.ini
@@ -1,5 +1,26 @@
+
 [tabs]
 index					= "Adressen"
 group					= "Gruppen"
 import					= "Importieren"
 export					= "Exportieren"
+
+[errorCodes]
+0			= "NONE"
+1			= "MX_RESOLUTION_FAILED"
+2			= "SOCKET_FAILED"
+3			= "SOCKET_EXCEPTION"
+4			= "CONNECTION_FAILED"
+5			= "HELO_FAILED"
+6			= "SENDER_NOT_ACCEPTED"
+7			= "RECEIVER_NOT_ACCEPTED"
+
+[errorLabels]
+0			= "Kein Fehler."
+1			= "Mail-Server konnte nicht ermittelt werden."
+2			= "Verbindung zum Mail-Server fehlgeschlagen."
+3			= "Verbindung zum Mail-Server abgebrochen."
+4			= "Mail-Server verweigert die Kommunikation."
+5			= "Protokolabsprache mit Mail-Server gescheitert."
+6			= "Mail-Server nimmt Mails von diesem Testabsender nicht an."
+7			= "Mail-Server nimmt Mails für diesen Empfänger nicht an."
