--- a/Resource/Authentication/Backend/JSON/locales/de/auth/json.ini
+++ b/Resource/Authentication/Backend/JSON/locales/de/auth/json.ini
@@ -16,7 +16,7 @@ labelRemember_title			= "automatisch wieder einloggen"
 buttonLogin					= "einloggen"
 buttonRegister				= "Konto anlegen"
 buttonPassword				= "Password vergessen?"
-msgSuccess					= "Du bist nun eingeloggt."
+msgSuccess					= "Sie sind nun eingeloggt."
 msgNoticePasswordChanged	= "Das neue Passwort ist nun aktiv. Das alte Passwort gilt nicht mehr."
 msgNoUsername				= "Der <label for="input_login_username">Benutzername</label> fehlt."
 msgNoPassword				= "Das <label for="input_login_password">Passwort</label> fehlt."
@@ -32,4 +32,4 @@ legend						= "Information"
 
 [logout]
 msgSuccess					= "Sie sind nun ausgeloggt."
-msgAutoLogout				= "Sie wurden nach längerer Inaktivität automatisch abgemeldet."
+msgAutoLogout				= "Sie wurden nach längerer Inaktivität automatisch ausgeloggt."
