--- a/Resource/Authentication/Backend/OAuth/locales/de/auth/oauth.ini
+++ b/Resource/Authentication/Backend/OAuth/locales/de/auth/oauth.ini
@@ -19,7 +19,7 @@ labelRemember_title		= "automatisch wieder einloggen"
 buttonLogin				= "einloggen"
 buttonRegister			= "Konto anlegen"
 buttonPassword			= "Password vergessen?"
-msgSuccess				= "Du bist nun eingeloggt."
+msgSuccess				= "Sie sind nun eingeloggt."
 msgNoUsername			= "Der <label for="input_login_username">Benutzername</label> fehlt."
 msgNoPassword			= "Das <label for="input_login_password">Passwort</label> fehlt."
 msgInvalidUser			= "Zugang verweigert: Das Benutzerkonto existiert nicht."
@@ -34,7 +34,7 @@ legend					= "Information"
 
 [logout]
 msgSuccess				= "Sie sind nun ausgeloggt."
-msgAutoLogout			= "Sie wurden nach längerer Inaktivität automatisch abgemeldet."
+msgAutoLogout			= "Sie wurden nach längerer Inaktivität automatisch ausgeloggt."
 
 [password]
 heading					= "Passwort vergessen?"
