--- a/Manage/Content/Locales/module.xml
+++ b/Manage/Content/Locales/module.xml
@@ -3,7 +3,7 @@
 	<title>Manage: Content: Locales</title>
 	<description><![CDATA[Editor for language files, HTML blocks and mail templates.]]></description>
 	<category>Management</category>
-	<version>0.6.1</version>
+	<version>0.6.2</version>
 	<log version="0.5.3">Use fontend resource module.</log>
 	<log version="0.5.4">Use language resolved by frontend module.</log>
 	<log version="0.5.5">Hide language selector if only one language in frontend.</log>
@@ -13,6 +13,7 @@
 	<log version="0.5.9">Update button colors.</log>
 	<log version="0.6">Extend code editor by AJAX-save with Ctrl-S.</log>
 	<log version="0.6.1">Extract code mirror call to JavaScript file.</log>
+	<log version="0.6.2">Internal improvements.</log>
 	<company site="http://ceusmedia.de/">Ceus Media</company>
 	<author email="christian.wuerker@ceusmedia.de">Christian W&#xFC;rker</author>
 	<files>
