Support page icons.

--- a/Manage/Pages/locales/de/manage/page.ini
+++ b/Manage/Pages/locales/de/manage/page.ini
@@ -65,6 +65,7 @@ labelScope						= "Navigationsbereich"
 labelParentId						= "Unterseite von"
 labelModule						= "Modul"
 labelRank						= "Rang"
+labelIcon						= "Icon"
 buttonSave						= "speichern"
 
 [edit]
@@ -78,10 +79,9 @@ labelScope						= "Navigationsbereich"
 labelParentId					= "Unterseite von"
 labelModule						= "Modul"
 labelRank						= "Rang"
-
 labelChangefreq					= "Änderungshäufigkeit"
 labelPriority					= "Wichtigkeit"
-
+labelIcon						= "Icon"
 buttonCancel					= "abbrechen"
 buttonSave						= "speichern"
 buttonRemove					= "entfernen"
