Add Kanban perspective and support for mission documents.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -105,7 +105,9 @@ buttonRemove			= "entfernen"
 buttonRemoveConfirm		= "Diese Aufgabe wirklich entfernen?"
 
 [view]
-legend					= "Fakten"
+
+[view-facts]
+heading					= "Fakten"
 labelType				= "Typ"
 labelPriority			= "Priorität"
 labelStatus				= "Status"
@@ -126,9 +128,26 @@ buttonCancel			= "zur Liste"
 buttonEdit				= "bearbeiten"
 buttonCopy				= "kopieren"
 
+[view-content]
+headingContent			= "Beschreibung"
+headingVersions			= "Versionen"
+
+
+[view-documents]
+heading					= "Dokumente"
+noEntries				= "Keine Dokumente vorhanden."
+headTitle				= "Dateiname"
+
+
 [types]
 0						= "Aufgabe"
 1						= "Termin"
+
+[viewTypes]
+calendar				= "Kalender"
+now						= "Liste"
+kanban					= "Pinwand"
+gantt					= "Ablauf"
 
 [priorities]
 0						= "unbekannt"
