Rearrange column order in days lists.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -90,6 +90,14 @@ msgInvalidProject		= "Der gewählte Eintrag ist einem fremden Projekt zugewiesen
 msgNotEditor			= "Das Recht zum Bearbeiten von Aufgaben wurde nicht vergeben."
 msgLocked				= "Dieser Eintrag ist gesperrt, da er gerade von %s bearbeitet wird."
 
+[edit-content]
+heading					= "Details"
+tabEdit					= "Editor"
+tabView					= "Ansicht"
+tabConvert				= "Konvertieren"
+hintMarkdown			= "Du kannst hier den %s  benutzen."
+hintMarkdownLabel		= "Markdown-Syntax"
+hintMarkdownLink		= "http://de.wikipedia.org/wiki/Markdown"
 
 [edit-panel-close]
 heading					= "Abschliessen"
