Extend filters by icons and change order.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -152,13 +152,13 @@ headTitle				= "Dateiname"
 1						= "Termin"
 
 [viewTypes]
-calendar				= "Kalender"
 now						= "Liste"
+calendar				= "Kalender"
 kanban					= "Pinwand"
-gantt					= "Ablauf"
+;gantt					= "Ablauf"
 
 [priorities]
-0						= "unbekannt"
+0						= "nicht bestimmt"
 1						= "sehr wichtig"
 2						= "wichtig"
 3						= "normal"
