Implement hook Resource:Users::getRelatedUsers.

--- a/Resource/Authentication/Backend/Local/locales/de/auth/local.ini
+++ b/Resource/Authentication/Backend/Local/locales/de/auth/local.ini
@@ -97,3 +97,6 @@ msgAddressInvalid			= "Die angegebene Adresse konnte auf der Karte nicht gefunde
 [mails]
 onRegister					= "Registrierung und Kontobestätigung"
 onPassword					= "Neues Passwort"
+
+[hook-getRelatedUsers]
+label						= "alle Benutzer"
